<resources>
    <string name="app_name">APQ Emulator</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="base_action_settings">Settings</string>

    <string name="user_permissions_requested">You need to grant the application some permissions.</string>
    <string name="base_ok">OK</string>
    <string name="base_choose">Choose</string>
    <string name="base_folder">Folder</string>
    <string name="base_file">File</string>
    <string name="base_upper_level">Upper Level</string>
    <string name="user_unable_to_get_upper">Unable to Get to Upper Level</string>
    <string name="progress_msg_extract">Extracting APQ Files…</string>
    <string name="progress_msg_deploy">Deploying Files…%s%%</string>
    <string name="progress_msg_done">Done</string>
    <string name="progress_msg_clean">Cleaning…</string>
    <string name="progress_msg_proofread">Proofreading…</string>
    <string name="base_error">Sorry! Something went wrong: %s</string>
    <string name="user_close">Close</string>
    <string name="user_ignore">Ignore</string>
    <string name="user_copy">Copy</string>
    <string name="base_copied">Copied</string>
    <string name="base_proofread_failed">Failed to proofread the APQ files!</string>
    <string name="base_calcuating">Calcuating…</string>
    <string name="base_units_mb">%sMB</string>
    <string name="base_units_kb">%sKB</string>
    <string name="base_units_gb">%sGB</string>
    <string name="activity_vm_editor">Virtual Machine Editor</string>
    <string name="base_name">name</string>
    <string name="base_description">description</string>
    <string name="base_disk">Disk</string>
    <string name="base_basic_info">Basic Info</string>
    <string name="user_add_raw">Add</string>
    <string name="base_hard_disk">Hard Disk %s</string>
    <string name="base_floppy_disk">Floppy Disk %s</string>
    <string name="base_cd_rom">CD-ROM %s</string>
    <string name="base_raw_hard_disk">Hard Disk</string>
    <string name="base_raw_floppy_disk">Floppy Disk</string>
    <string name="base_raw_cd_rom">CD-ROM</string>
    <string name="base_please_wait">Please wait</string>
    <string name="user_add">Add %s</string>
    <string name="base_use_as">Use As</string>
    <string name="base_edit">Edit</string>
    <string name="base_cancel">Cancel</string>
    <string name="user_delete">Delete</string>
    <string name="user_msg_duplicate">Could not add duplicate items!</string>
    <string name="base_boot">Boot</string>
    <string name="base_useless_configuration">Detect useless configuration</string>
    <string name="base_msg_ules_conf_cause">Your selection won\'t work because we couldn\'t find the device or some file doesn\'t exist.</string>
    <string name="user_choose_to_boot">Choose an item to boot from</string>
    <string name="base_boot_from">Boot from</string>
    <string name="base_cpu" translatable="false">CPU</string>
    <string name="base_cpu_framework">"CPU Framework: "</string>
    <string name="base_x86" translatable="false">x86</string>
    <string name="base_x86_64">x86 (64-bit)</string>
    <string name="base_arm" translatable="false">ARM</string>
    <string name="base_aarch64">aarch64 (64-bit)</string>
    <string name="base_model">Model:</string>
    <string name="user_edit_cpu">CPU Edit</string>
    <string name="base_memory">Memory</string>
    <string name="base_max">Maximum %s</string>
    <string name="base_unit">Unit</string>
    <string name="base_units_raw_mb">MB</string>
    <string name="base_units_raw_kb">KB</string>
    <string name="base_units_raw_gb">GB</string>
    <string name="base_units_raw_b">B</string>
    <string name="base_units_b">%sB</string>
    <string name="user_saving_vm">Saving VM profile…</string>
    <string name="base_error_vm_writing_failed">Failed to write VM Profile.</string>
    <string name="base_unnamed">Unnamed</string>
    <string name="base_welcome_t">Welcome to the whole new APQ!</string>
    <string name="base_welcome_s">Click this floating button to open wonder!</string>
    <string name="base_welcome_vmeditor_t">Here is the VM Profile Editor.</string>
    <string name="base_welcome_vmeditor_s">I guess you havn\'t known it too much. There are some instructions.</string>
    <string name="base_instr_snapshot_t">The Snapshot</string>
    <string name="base_instr_snapshot_s">You can see a screenshot in the virtual machine or put your own photo here. It also shows in the main screen.</string>
    <string name="base_instr_nAd_t">Name &amp; Description</string>
    <string name="base_instr_nAd_s">Allow you to name and describe the VM profile. It is noteworthy that the name is necessary to fill in.</string>
    <string name="base_instr_disk_t">Disk Options</string>
    <string name="base_instr_disk_s">Allows you to change disks of the virtual machine.</string>
    <string name="base_instr_cpu_t">CPU Options</string>
    <string name="base_instr_cpu_s">Allows you to control CPU framework, model, etc.</string>
    <string name="base_instr_memory_t">Memory Options</string>
    <string name="base_instr_memory_s">Allows you to control VM\'s memory size.</string>
    <string name="base_instr_save_button_t">The Save Button</string>
    <string name="base_instr_save_button_s">After you have done, click the floating button to save your options.</string>
    <string name="base_instr_firstvm_t">It seems that you have created a new Virtual Machine.</string>
    <string name="base_instr_firstvm_s">Click this button to run!</string>
    <string name="base_vm_error_title">Failed to start VM</string>
    <string name="base_vm_error_content">Here are the details:</string>
    <string name="user_dismiss">Dismiss</string>
    <string name="base_error_refreshing">Unable to refresh: Some VM is running.</string>
    <string name="base_advanced_runing_options">Advanced Running Options</string>
    <string name="base_object_not_found_title">VM Not Found</string>
    <string name="base_object_not_found">Something with the VM whose file name is %s went wrong.</string>
    <string name="user_console_title">The Console</string>
    <string name="user_console_subtitle">To control the VM by qemu commands for some advanced operations.</string>
    <string name="base_vm_running_snackbar">VM is running on %s %s</string>
    <string name="base_activity_console">Console</string>
    <string name="base_running_status">Running Status</string>
    <string name="base_status_running">Running</string>
    <string name="base_status_stopped">Stopped</string>
    <string name="base_file_choosing">File Choosing</string>
    <string name="user_create">Create %s</string>
    <string name="user_new_disk_file">New Disk File</string>
    <string name="user_file_name_entering">File Name (Enter To Confirm)</string>
    <string name="base_creating">Creating %s …</string>
    <string name="message_no_vm">No VM Found</string>
    <string name="base_display">Display</string>
    <string name="user_display_method">Display Method</string>
    <string name="base_display_vnc" translatable="false">VNC</string>
    <string name="base_display_xsdl" translatable="false">X SDL</string>
    <string name="base_choose_display">Choose one of these methods</string>

    <!-- Strings related to Settings -->
    <string name="base_settings_general">General</string>
    <string name="base_title_vm">Virtual Machines</string>
    <string name="base_title_qemu" translatable="false">QEMU</string>
    <string name="user_language">Language</string>
    <string name="base_default">Default</string>
    <string name="pref_restart_apply">Restart Application to Apply</string>
    <string name="pref_reinstall">Reinstall QEMU</string>
    <string name="base_qemu_version">QEMU Version</string>
    <string name="base_operations">Operations</string>
    <string name="user_reinstall">Reinstall</string>
    <string name="base_msg_unkonwn">Unknown</string>
    <string name="base_msg_system_aarch">System aarch: %s</string>
    <string name="base_msg_deleting">Deleting %s</string>
    <string name="base_msg_failed">Failed</string>
    <string name="base_enable_no_root_mode">Enable NOROOT mode</string>
    <string name="base_msg_noroot">This feature may cause many problems. Your VM process may be killed by system in background for example.</string>
    <string name="user_warn">Warn</string>
    <string name="base_msg_not_rooted">Your device doesn\'t have root premissions. However, you can use noroot mode which is not stable.</string>
    <string name="base_msg_crashed">Ooops! Application has crashed.</string>
    <string name="base_detailed_info">Detailed Info</string>
    <string name="base_night_mode">Night Mode</string>
    <string name="base_appearance">Appearance</string>
</resources>
