<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/card_padding">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/base_choose_display"
        android:textSize="16sp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="6dp"/>
    <com.apq.plus.View.MaterialItemView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/to_choose_vnc"
        android:title="@string/base_display_vnc"/>
    <com.apq.plus.View.MaterialItemView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/to_choose_xsdl"
        android:title="@string/base_display_xsdl"/>
</LinearLayout>