<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/black"
        android:theme="@style/AppTheme.AppBarOverlay.Light">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <android.support.v7.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:id="@+id/icon"
                android:adjustViewBounds="true"
                android:layout_gravity="center_horizontal"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                app:srcCompat="@drawable/ic_photo_white" />
            <android.support.v7.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?android:attr/actionBarSize"
                android:id="@+id/toolbar"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                app:layout_collapseMode="pin">
                <android.support.v7.widget.ActionMenuView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/action_menu"
                    android:layout_gravity="end"
                    android:foregroundTint="@color/colorPrimary"/>
            </android.support.v7.widget.Toolbar>
        </FrameLayout>
    </android.support.design.widget.AppBarLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:background="@color/activity_background"
        android:paddingTop="@dimen/card_padding">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="0dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingTop="@dimen/card_padding"
                    android:paddingBottom="@dimen/card_padding"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:orientation="vertical"
                        android:layout_gravity="center"
                        android:layout_marginBottom="4dp">
                        <android.support.v7.widget.AppCompatImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:srcCompat="@drawable/ic_info_primary"
                            android:id="@+id/ic_info"
                            android:layout_centerVertical="true"/>
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_toEndOf="@id/ic_info"
                            android:layout_marginStart="12dp"
                            android:layout_centerVertical="true">
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/name"
                                android:text="@string/base_name"
                                android:textColor="@android:color/black"
                                android:textSize="22sp"/>
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/description"
                                android:text="@string/base_description"
                                android:textSize="18sp"/>
                        </LinearLayout>
                        <android.support.v7.widget.AppCompatImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/edit"
                            app:srcCompat="@drawable/ic_edit_primary"
                            android:layout_centerVertical="true"
                            android:layout_alignParentEnd="true"
                            android:clickable="true"
                            android:focusable="true"
                            android:background="?android:attr/selectableItemBackgroundBorderless"/>
                    </RelativeLayout>

                    <include layout="@layout/divider"/>
                    <!-- Running Status -->
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/card_padding"
                        android:layout_gravity="center"
                        android:layout_marginBottom="@dimen/card_padding">
                        <android.support.v7.widget.AppCompatImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/ic_status"
                            app:srcCompat="@drawable/ic_stop_primary"
                            android:layout_centerVertical="true"/>
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_toEndOf="@id/ic_status"
                            android:layout_marginStart="12dp"
                            android:layout_centerVertical="true">
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/base_running_status"
                                android:textColor="@android:color/black"
                                android:textSize="22sp"/>
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/text_status"
                                android:text="@string/base_status_stopped"
                                android:textSize="18sp"
                                android:textColor="@android:color/black"/>
                        </LinearLayout>
                    </RelativeLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/card_margin"
                android:layout_marginBottom="@dimen/card_margin"
                app:cardCornerRadius="0dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="12dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/base_advanced_runing_options"
                        android:textSize="22sp"
                        android:textColor="@android:color/black"
                        android:layout_marginBottom="2dp"/>
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/advanced_console"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true">
                        <android.support.v7.widget.AppCompatImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/console_icon"
                            android:layout_centerVertical="true"
                            app:srcCompat="@drawable/ic_console_primary"
                            android:layout_marginStart="8dp"
                            android:layout_marginEnd="20dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/console_title"
                            android:layout_toEndOf="@id/console_icon"
                            android:textSize="18sp"
                            android:textColor="@android:color/black"
                            android:text="@string/user_console_title" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/console_subtitle"
                            android:text="@string/user_console_subtitle"
                            android:layout_below="@id/console_title"
                            android:layout_toEndOf="@id/console_icon"/>
                    </RelativeLayout>
                    <!--<include layout="@layout/divider"/>-->
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>

</android.support.design.widget.CoordinatorLayout>